crates/ascribe-check/tests/snapshots/prompt__a_project_in_a_subfolder_writes_commands_from_the_repository_root.snap
---
source: crates/ascribe-check/tests/prompt.rs
expression: "one_problem(&project, &context, \"docs/install.md\")"
---
Fix this problem in `docs/install.md`.

Where: docs/install.md:5
Project: site/docs/
Build: `self-hosted`

Problem: ASC036 `link-target-missing`, an error
Message: `overview.md` doesn't exist
How to fix it: Fix the path, or create the file. Names must match exactly, including case, and the file must be inside the project.
Reference: https://ascribed-dev.com/reference/diagnostics/#asc036-link-target-missing
Line 5:
```markdown
Read [the overview](overview.md).
```

Follow the project's rules in `site/docs/AGENTS.md`.
When you're done, run `ascribe check site/docs/docs/install.md` and fix what it reports.
