crates/ascribe-check/tests/snapshots/prompt__an_unsaved_file_is_saved_first.snap
---
source: crates/ascribe-check/tests/prompt.rs
expression: text
---
Fix this problem in `docs/install.md`.

Where: docs/install.md:5
The file has unsaved changes; save it before you start.
Build: `site`, the editor's. `ascribe check` checks every build.

Problem: ASC036 `link-target-missing`, an error
Message: `overview.md` doesn't exist
How to fix it: Fix the path, or create the file. Names must match exactly, including case, and the file must be inside the project.
Reference: https://ascribed-dev.com/reference/diagnostics/#asc036-link-target-missing
Line 5:
```markdown
Read [the overview](overview.md).
```

When you're done, run `ascribe check docs/install.md` and fix what it reports.
